--- a/pom.xml
+++ b/pom.xml
@@ -180,9 +180,11 @@
     </parent>
 
     <!-- 本项目信息 -->
+    <!-- 正式版格式：super.3.0.3-release-->
+    <!-- 快照版格式：super.3.0.3-SNAPSHOT-->
     <groupId>vip.isass</groupId>
     <artifactId>super</artifactId>
-    <version>super.3.0.3</version>
+    <version>super.3.0.3-release</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -214,15 +216,19 @@
 
     <!-- 配置属性 -->
     <properties>
+        <!-- start build properties -->
+
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
+        <!-- end build properties -->
+
         <!-- start isass-core -->
 
-        <super-core.version>super.3.0.3</super-core.version>
+        <super-core.version>${project.version}</super-core.version>
 
         <!-- end isass-core -->
 
