--- a/super-core-net/pom.xml
+++ b/super-core-net/pom.xml
@@ -176,12 +176,12 @@
     <parent>
         <groupId>vip.isass</groupId>
         <artifactId>super</artifactId>
-        <version>super.3.0.3</version>
+        <version>super.3.0.3-release</version>
     </parent>
 
     <!-- 本项目信息 -->
     <artifactId>super-core-net</artifactId>
-    <version>super.3.0.3</version>
+    <version>super.3.0.3-release</version>
 
     <dependencies>
         <dependency>
@@ -201,7 +201,7 @@
         <dependency>
             <groupId>vip.isass</groupId>
             <artifactId>super-core-protobuf</artifactId>
-            <version>super.3.0.3</version>
+            <version>super.3.0.3-release</version>
         </dependency>
 
         <dependency>
