--- a/super-core-cache/pom.xml
+++ b/super-core-cache/pom.xml
@@ -176,12 +176,12 @@
     <parent>
         <groupId>vip.isass</groupId>
         <artifactId>super</artifactId>
-        <version>super.3.0.4-release</version>
+        <version>super.3.0.5-SNAPSHOT</version>
     </parent>
 
     <!-- 本项目信息 -->
     <artifactId>super-core-cache</artifactId>
-    <version>super.3.0.4-release</version>
+    <version>super.3.0.5-SNAPSHOT</version>
 
     <dependencies>
 
