--- a/super-core/pom.xml
+++ b/super-core/pom.xml
@@ -214,6 +214,10 @@
             <artifactId>swagger-models</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
