[refactor] refactoring request log

--- a/pom.xml
+++ b/pom.xml
@@ -821,6 +821,7 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <encoding>UTF-8</encoding>
+                    <compilerArgument>-parameters</compilerArgument>
                 </configuration>
             </plugin>
 
