--- a/super-core-database-mybatisplus/pom.xml
+++ b/super-core-database-mybatisplus/pom.xml
@@ -213,6 +213,11 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
