[chore] git-commit-id-plugin 插件生成的文件改为默认的

--- a/pom.xml
+++ b/pom.xml
@@ -848,9 +848,9 @@
                     <verbose>true</verbose>
                     <dateFormat>yyyyMMddHHmmss</dateFormat>
                     <generateGitPropertiesFile>true</generateGitPropertiesFile>
-                    <generateGitPropertiesFilename>${project.build.outputDirectory}/version.txt
+                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
                     </generateGitPropertiesFilename>
-                    <format>txt</format>
+                    <format>properties</format>
                     <abbrevLength>8</abbrevLength>
                     <failOnNoGitDirectory>false</failOnNoGitDirectory>
                     <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
