[optimize] 优化打包的配置文件

--- a/super-core-deploy-springcloud/src/main/resources/deploy/bootstrap.properties
+++ b/super-core-deploy-springcloud/src/main/resources/deploy/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=master
+spring.cloud.nacos.discovery.registerEnabled=true
 spring.cloud.nacos.discovery.server-addr=http://127.0.0.1:8848
 spring.cloud.nacos.discovery.namespace=
 spring.cloud.nacos.discovery.group=
