[optimize] 优化部署包启动脚本和配置

--- a/super-core-deploy-springcloud/src/main/resources/deploy/bootstrap.properties
+++ b/super-core-deploy-springcloud/src/main/resources/deploy/bootstrap.properties
@@ -12,3 +12,5 @@ spring.cloud.nacos.config.shared-configs[1].dataId=application-${spring.profiles
 spring.cloud.nacos.config.shared-configs[1].group=
 spring.cloud.nacos.config.shared-configs[1].refresh=true
 logging.config=./logback-spring.xml
+logging.level.p6spy=warn
+logging.level.vip.isass.core.web.log.aop.RequestLogAop=warn
