--- a/super-core-deploy-springboot/src/main/resources/deploy/application.properties
+++ b/super-core-deploy-springboot/src/main/resources/deploy/application.properties
@@ -4,3 +4,5 @@ spring.datasource.mysql.master.username=root
 spring.datasource.mysql.master.password=123456
 spring.datasource.mysql.master.database=@service-name@
 logging.config=./logback-spring.xml
+logging.level.p6spy=warn
+logging.level.vip.isass.core.web.log.aop.RequestLogAop=warn
