[feat] add maven-release-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -900,6 +900,7 @@
                     <useReleaseProfile>false</useReleaseProfile>
                     <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                     <pushChanges>false</pushChanges>
+                    <preparationGoals>clean validate</preparationGoals>
                 </configuration>
             </plugin>
         </plugins>
