--- a/k8s/configMap_global.yaml
+++ b/k8s/configMap_global.yaml
@@ -7,6 +7,9 @@ data:
   SPRING_APPLICATION_JSON: |-
     {
         "spring": {
+            "profiles": {
+                "active": "dev"
+            },
             "cloud": {
                 "nacos": {
                     "discovery": {
