--- a/super-core-web-rpc-feign/pom.xml
+++ b/super-core-web-rpc-feign/pom.xml
@@ -195,6 +195,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>io.github.openfeign.form</groupId>
             <artifactId>feign-form</artifactId>
         </dependency>
