[feat] 支持 mysql json 字段的 JSON_CONTAINS 语法查询

--- a/pom.xml
+++ b/pom.xml
@@ -303,6 +303,10 @@
         <cglib.version>3.2.3</cglib.version>
 
         <wxjava.version>4.1.0</wxjava.version>
+
+        <geotools.version>25.2</geotools.version>
+        <jts.version>1.18.1</jts.version>
+        <sqlite-jdbc.version>3.34.0</sqlite-jdbc.version>
     </properties>
 
     <!-- maven功能说明 -->
