--- a/pom.xml
+++ b/pom.xml
@@ -184,7 +184,7 @@
     <!-- 快照版格式：super.x.y.z-SNAPSHOT-->
     <groupId>vip.isass</groupId>
     <artifactId>super</artifactId>
-    <version>super.3.1.1-SNAPSHOT</version>
+    <version>super.3.2.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -203,8 +203,6 @@
         <module>super-core-mq-kafka011</module>
         <module>super-core-mq-spring-event</module>
         <module>super-core-deploy</module>
-        <module>super-core-deploy-springboot</module>
-        <module>super-core-deploy-springcloud</module>
         <module>super-core-web</module>
         <module>super-core-web-security</module>
         <module>super-core-web-res</module>
@@ -236,7 +234,7 @@
 
         <!-- start isass-core -->
 
-        <super-core.version>super.3.1.1-SNAPSHOT</super-core.version>
+        <super-core.version>super.3.2.1-SNAPSHOT</super-core.version>
 
         <!-- end isass-core -->
 
@@ -322,12 +320,12 @@
     意味着打包的时候可以不用包进去，别的设施(Web Container)会提供。
     事实上该依赖理论上可以参与编译，测试，运行等周期。相当于compile，但是在打包阶段做了exclude的动作。
 
-    <scope>runntime</scope>
-    runntime表示被依赖项目无需参与项目的编译，不过后期的测试和运行周期需要其参与。
+    <scope>runtime</scope>
+    runtime表示被依赖项目无需参与项目的编译，不过后期的测试和运行周期需要其参与。
     与compile相比，跳过编译而已，说实话在终端的项目（非开源，企业内部系统）中，和compile区别不是很大。
     比较常见的如JSR×××的实现，对应的API jar是compile的，具体实现是runtime的，compile只需要知道接口就足够了。
-    oracle jdbc驱动架包就是一个很好的例子，一般scope为runntime。
-    另外runntime的依赖通常和optional搭配使用，optional为true。我可以用A实现，也可以用B实现。
+    oracle jdbc驱动架包就是一个很好的例子，一般scope为runtime。
+    另外runtime的依赖通常和optional搭配使用，optional为true。我可以用A实现，也可以用B实现。
 
     <scope>import</scope>
     import：从其它的pom文件中导入依赖设置。
@@ -373,18 +371,6 @@
             <dependency>
                 <groupId>vip.isass</groupId>
                 <artifactId>super-core-deploy</artifactId>
-                <version>${super-core.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>vip.isass</groupId>
-                <artifactId>super-core-deploy-springboot</artifactId>
-                <version>${super-core.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>vip.isass</groupId>
-                <artifactId>super-core-deploy-springcloud</artifactId>
                 <version>${super-core.version}</version>
             </dependency>
 
