--- a/super-core-deploy/src/main/resources/deploy/bootstrap.properties
+++ b/super-core-deploy/src/main/resources/deploy/bootstrap.properties
@@ -1,15 +1,15 @@
 spring.cloud.nacos.discovery.registerEnabled=true
 spring.cloud.nacos.discovery.server-addr=http://127.0.0.1:8848
 spring.cloud.nacos.discovery.namespace=
-spring.cloud.nacos.discovery.group=
+spring.cloud.nacos.discovery.group=DEFAULT_GROUP
 spring.cloud.nacos.config.serverAddr=http://127.0.0.1:8848
-spring.cloud.nacos.config.group=
+spring.cloud.nacos.config.group=DEFAULT_GROUP
 spring.cloud.nacos.config.namespace=
 spring.cloud.nacos.config.shared-configs[0].dataId=application.yaml
-spring.cloud.nacos.config.shared-configs[0].group=
+spring.cloud.nacos.config.shared-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.shared-configs[0].refresh=true
 spring.cloud.nacos.config.shared-configs[1].dataId=application-${spring.profiles.active:}.yaml
-spring.cloud.nacos.config.shared-configs[1].group=
+spring.cloud.nacos.config.shared-configs[1].group=DEFAULT_GROUP
 spring.cloud.nacos.config.shared-configs[1].refresh=true
 logging.config=./logback-spring.xml
 logging.level.p6spy=warn
