--- a/super-core-protobuf/pom.xml
+++ b/super-core-protobuf/pom.xml
@@ -193,5 +193,10 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.protobuf-java-format</groupId>
+            <artifactId>protobuf-java-format</artifactId>
+        </dependency>
     </dependencies>
 </project>
