[optimize] 优化 deploy 包的默认配置文件

--- a/super-core-deploy/src/main/resources/deploy/application.properties
+++ b/super-core-deploy/src/main/resources/deploy/application.properties
@@ -4,5 +4,11 @@ spring.datasource.mysql.master.username=root
 spring.datasource.mysql.master.password=123456
 spring.datasource.mysql.master.database=@service-name@
 logging.config=./logback-spring.xml
+
+# sql?????????????????????????sql????????????????????? INFO, ???? sql
 logging.level.p6spy=warn
+
+# ???? http ??????
+core.web.log.request-log.enable=true
+# http ???????????????????????????????????????????????? debug, ???? http ????
 logging.level.vip.isass.core.web.log.aop.RequestLogAop=warn
