--- a/super-core-deploy/src/main/resources/deploy/bootstrap.properties
+++ b/super-core-deploy/src/main/resources/deploy/bootstrap.properties
@@ -1,7 +1,12 @@
+# nacos ???????
+spring.cloud.nacos.discovery.enabled=false
 spring.cloud.nacos.discovery.registerEnabled=true
 spring.cloud.nacos.discovery.server-addr=http://127.0.0.1:8848
 spring.cloud.nacos.discovery.namespace=
 spring.cloud.nacos.discovery.group=DEFAULT_GROUP
+
+# nacos ????
+spring.cloud.nacos.config.enabled=false
 spring.cloud.nacos.config.serverAddr=http://127.0.0.1:8848
 spring.cloud.nacos.config.group=DEFAULT_GROUP
 spring.cloud.nacos.config.namespace=
@@ -11,6 +16,3 @@ spring.cloud.nacos.config.shared-configs[0].refresh=true
 spring.cloud.nacos.config.shared-configs[1].dataId=application-${spring.profiles.active:}.yaml
 spring.cloud.nacos.config.shared-configs[1].group=DEFAULT_GROUP
 spring.cloud.nacos.config.shared-configs[1].refresh=true
-logging.config=./logback-spring.xml
-logging.level.p6spy=warn
-logging.level.vip.isass.core.web.log.aop.RequestLogAop=warn
