--- a/super-core-deploy/src/main/resources/deploy/application.properties
+++ b/super-core-deploy/src/main/resources/deploy/application.properties
@@ -5,10 +5,10 @@ spring.datasource.mysql.master.password=123456
 spring.datasource.mysql.master.database=@service-name@
 logging.config=./logback-spring.xml
 
-# sql?????????????????????????sql????????????????????? INFO, ???? sql
+# sql \u65E5\u5FD7\u8BB0\u5F55\u5668\u3002\u9ED8\u8BA4\u4E0D\u6253\u5370sql\u3002\u751F\u4EA7\u73AF\u5883\u5EFA\u8BAE\u4E0D\u6253\u5370sql\u3002\u9700\u8981\u6253\u5370\u5219\u6539\u4E3A info
 logging.level.p6spy=warn
 
-# ???? http ??????
+# http \u8BF7\u6C42\u8BB0\u5F55\uFF0C\u53EF\u8BB0\u5F55\u8BF7\u6C42\u7684\u65F6\u95F4\uFF0C\u5165\u53C2\uFF0C\u51FA\u53C2\uFF0C\u8017\u65F6\u7B49 http \u8BF7\u6C42\u4FE1\u606F
 core.web.log.request-log.enable=true
-# http ???????????????????????????????????????????????? debug, ???? http ????
+# http \u8BF7\u6C42\u8BB0\u5F55\u65E5\u5FD7\u8BB0\u5F55\u5668\u3002\u9ED8\u8BA4\u4E0D\u6253\u5370 http \u8BF7\u6C42\u8BB0\u5F55\u3002\u751F\u4EA7\u73AF\u5883\u5EFA\u8BAE\u4E0D\u6253\u5370\u3002\u9700\u8981\u6253\u5370\u5219\u6539\u4E3A debug
 logging.level.vip.isass.core.web.log.aop.RequestLogAop=warn
