--- a/super-core-deploy/src/main/resources/deploy/bootstrap.properties
+++ b/super-core-deploy/src/main/resources/deploy/bootstrap.properties
@@ -1,11 +1,11 @@
-# nacos ???????
+# nacos \u670D\u52A1\u6CE8\u518C\u4E0E\u53D1\u73B0
 spring.cloud.nacos.discovery.enabled=false
 spring.cloud.nacos.discovery.registerEnabled=true
 spring.cloud.nacos.discovery.server-addr=http://127.0.0.1:8848
 spring.cloud.nacos.discovery.namespace=
 spring.cloud.nacos.discovery.group=DEFAULT_GROUP
 
-# nacos ????
+# nacos \u914D\u7F6E\u4E2D\u5FC3
 spring.cloud.nacos.config.enabled=false
 spring.cloud.nacos.config.serverAddr=http://127.0.0.1:8848
 spring.cloud.nacos.config.group=DEFAULT_GROUP
