--- a/super-core-database-mysql/src/main/resources/spy.properties
+++ b/super-core-database-mysql/src/main/resources/spy.properties
@@ -167,5 +167,6 @@
 #
 #
 
-driverlist=com.mysql.cj.jdbc.Driver
 appender=com.p6spy.engine.spy.appender.Slf4JLogger
+logMessageFormat=com.p6spy.engine.spy.appender.CustomLineFormat
+customLogMessageFormat=%(executionTime)ms|%(sqlSingleLine)
