[optimize] 优化 run.sh logback-spring.xml, 通过环境变量的方式控制在docker环境下不输出日志文件

--- a/super-core-web/pom.xml
+++ b/super-core-web/pom.xml
@@ -240,6 +240,12 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+
+        <!-- 使 logback 配置文件支持 if 条件表达式       -->
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
