--- a/pom.xml
+++ b/pom.xml
@@ -207,9 +207,8 @@
         <module>super-core-web-security</module>
         <module>super-core-web-swagger</module>
         <module>super-core-web-rpc-feign</module>
+        <module>super-core-net</module>
         <module>super-core-net-netty</module>
-        <module>super-core-net-tcp</module>
-        <module>super-core-net-websocket</module>
         <module>super-core-net-socketio</module>
         <module>super-core-protobuf</module>
         <module>super-core-elasticsearch</module>
@@ -490,19 +489,13 @@
 
             <dependency>
                 <groupId>vip.isass</groupId>
+                <artifactId>super-core-net</artifactId>
+                <version>${super-core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>vip.isass</groupId>
                 <artifactId>super-core-net-netty</artifactId>
-                <version>${super-core.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>vip.isass</groupId>
-                <artifactId>super-core-net-tcp</artifactId>
-                <version>${super-core.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>vip.isass</groupId>
-                <artifactId>super-core-net-websocket</artifactId>
                 <version>${super-core.version}</version>
             </dependency>
 
