--- a/super-core-net/pom.xml
+++ b/super-core-net/pom.xml
@@ -180,28 +180,14 @@
     </parent>
 
     <!-- 本项目信息 -->
-    <artifactId>super-core-net-netty</artifactId>
+    <artifactId>super-core-net</artifactId>
     <version>super.3.2.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
-            <artifactId>super-core-net</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>vip.isass</groupId>
-            <artifactId>super-core-protobuf</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
+            <artifactId>super-core</artifactId>
         </dependency>
     </dependencies>
+
 </project>
