--- a/pom.xml
+++ b/pom.xml
@@ -286,6 +286,7 @@
         <xerces.version>2.12.0</xerces.version>
 
         <klock.version>1.4-RELEASE</klock.version>
+        <lock4j-redisson.version>2.2.2</lock4j-redisson.version>
 
         <alipay.version>4.7.12.ALL</alipay.version>
 
@@ -698,6 +699,12 @@
                 <groupId>cn.keking</groupId>
                 <artifactId>spring-boot-klock-starter</artifactId>
                 <version>${klock.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>lock4j-redisson-spring-boot-starter</artifactId>
+                <version>${lock4j-redisson.version}</version>
             </dependency>
 
             <!-- alipay -->
