--- a/pom.xml
+++ b/pom.xml
@@ -184,7 +184,7 @@
     <!-- 快照版格式：super.x.y.z-SNAPSHOT-->
     <groupId>vip.isass</groupId>
     <artifactId>super</artifactId>
-    <version>super.3.2.1-SNAPSHOT</version>
+    <version>super.3.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -232,7 +232,7 @@
 
         <!-- region isass-core -->
 
-        <super-core.version>super.3.2.1-SNAPSHOT</super-core.version>
+        <super-core.version>super.3.3.0-SNAPSHOT</super-core.version>
 
         <!-- endregion -->
 
@@ -241,9 +241,7 @@
         <spring.cloud.version>Hoxton.SR3</spring.cloud.version>
 
         <alibaba-nacos.version>2.2.1.RELEASE</alibaba-nacos.version>
-        <!--<netty.version>4.1.15.Final</netty.version>-->
-        <netty.version>4.1.36.Final</netty.version>
-        <netty-socketio.version>1.7.18</netty-socketio.version>
+
         <skywalking.version>6.6.0</skywalking.version>
 
         <!-- 数据库 -->
@@ -256,6 +254,8 @@
         <!--<mysql-connector-java.version>5.1.47</mysql-connector-java.version>-->
 
         <!-- net -->
+        <netty.version>4.1.76.Final</netty.version>
+        <netty-socketio.version>1.7.19</netty-socketio.version>
         <protobuf-java.version>3.9.0</protobuf-java.version>
         <protobuf-java-format.version>1.2</protobuf-java-format.version>
 
@@ -305,6 +305,7 @@
         <jts.version>1.18.1</jts.version>
         <coordtransform4j.version>1.0.2</coordtransform4j.version>
         <sqlite-jdbc.version>3.34.0</sqlite-jdbc.version>
+        <fastjson.version>1.2.83</fastjson.version>
     </properties>
 
     <!-- maven功能说明 -->
@@ -613,6 +614,12 @@
                 <version>${netty.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.corundumstudio.socketio</groupId>
+                <artifactId>netty-socketio</artifactId>
+                <version>${netty-socketio.version}</version>
+            </dependency>
+
             <!-- 工具类 -->
             <dependency>
                 <groupId>cn.hutool</groupId>
@@ -779,6 +786,12 @@
                 <groupId>com.github.binarywang</groupId>
                 <artifactId>weixin-java-cp</artifactId>
                 <version>${wxjava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
