--- a/super-core-net-socketio/pom.xml
+++ b/super-core-net-socketio/pom.xml
@@ -176,30 +176,27 @@
     <parent>
         <groupId>vip.isass</groupId>
         <artifactId>super</artifactId>
-        <version>super.3.2.1-SNAPSHOT</version>
+        <version>super.3.3.0-SNAPSHOT</version>
     </parent>
 
     <!-- 本项目信息 -->
     <artifactId>super-core-net-socketio</artifactId>
-    <version>super.3.2.1-SNAPSHOT</version>
+    <version>super.3.3.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
-            <artifactId>super-core</artifactId>
+            <artifactId>super-core-net</artifactId>
         </dependency>
 
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>${netty.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.corundumstudio.socketio</groupId>
             <artifactId>netty-socketio</artifactId>
-            <version>${netty-socketio.version}</version>
         </dependency>
     </dependencies>
-
 </project>
