[optimize] janino 依赖移到 super-core

--- a/super-core/pom.xml
+++ b/super-core/pom.xml
@@ -218,5 +218,11 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
         </dependency>
+
+        <!-- 使 logback 配置文件支持 if 条件表达式       -->
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+        </dependency>
     </dependencies>
 </project>
