[optimize] redis stream and subscriber use ThreadPoolTaskExecutor

--- a/kernel-net-socketio/pom.xml
+++ b/kernel-net-socketio/pom.xml
@@ -198,5 +198,10 @@
             <groupId>com.corundumstudio.socketio</groupId>
             <artifactId>netty-socketio</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>vip.isass</groupId>
+            <artifactId>super-core-web</artifactId>
+        </dependency>
     </dependencies>
 </project>
